Membuat Hero Section di src/index.html dan memperbarui src/output.css dan src/tailwind.config.js

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,54 @@
     <title>Porfolio TailwindCSS</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <!-- Hero Section Start -->
+    <section id="home" class="pt-36">
+      <div class="container">
+        <div class="flex flex-wrap">
+          <div
+            class="w-full self-center px-4 flex flex-wrap justify-center lg:w-1/2 lg:justify-start"
+          >
+            <h1
+              class="text-base text-center font-semibold text-primary md:text-xl lg:text-left"
+            >
+              Halo Semua 👋, Nama Saya
+              <span class="block font-bold text-4xl mt-1 lg:text-5xl"
+                >Dwiky Wisan Saputra</span
+              >
+            </h1>
+            <h2
+              class="font-medium text-center text-dark text-lg mb-4 lg:text-2xl lg:text-left"
+            >
+              Mahasiswa & Frontend Developer Enthusiast
+            </h2>
+            <p
+              class="font-medium text-center text-slate-500 mb-10 leading-relaxed lg:text-left"
+            >
+              Seseorang yang percaya bahwa setiap baris kode adalah langkah
+              menuju inovasi. Terus belajar, berkreasi, dan membawa ide jadi
+              nyata!
+            </p>
+            <a
+              href="#"
+              class="px-8 py-3 text-base font-semibold bg-primary text-white rounded-full hover:shadow-lg hover:bg-opacity-80 transition-all duration-300"
+              >Contact Me</a
+            >
+          </div>
+          <div class="w-full self-end px-4 lg:w-1/2">
+            <div class="relative mt-10 lg:mt-9 lg:right-0">
+              <img
+                src="/dist/img/dwiky.png"
+                alt="Dwiky Wisan Saputra"
+                class="max-w-full mx-auto"
+              />
+              <div
+                class="w-[350px] h-[350px] bg-primary rounded-2xl shadow-2xl absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2"
+              ></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Hero Section End -->
   </body>
 </html>
