--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="flex items-center justify-between relative">
           <div class="px-4">
-            <a href="#home" class="font-bold text-lg text-primary block py-6"
+            <a href="#home" class="font-bold text-xl text-primary block py-6"
               >Dwisans</a
             >
           </div>
@@ -267,6 +267,106 @@
       </div>
     </section>
     <!-- About Section End -->
+
+    <!-- Portfolio Section Start -->
+    <section id="portfolio" class="pt-36 pb-16 bg-slate-200">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="max-w-full mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+            <h2 class="font-bold text-3xl text-dark mb-4">Project Terbaru</h2>
+            <p class="font-medium text-md text-slate-500">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+              odio laudantium quibusdam soluta distinctio veniam ex iure esse
+              explicabo sunt.
+            </p>
+          </div>
+        </div>
+        <div
+          class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto"
+        >
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/portfolio/1.png"
+                alt="Undangan online"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
+              Undangan Pernikahan Online
+            </h3>
+            <p class="font-medium text-base text-slate-500">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur dignissimos repellendus totam!
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/portfolio/2.png"
+                alt="Landing Pages Dicoding"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
+              Cloning Landing Pages Dicoding
+            </h3>
+            <p class="font-medium text-base text-slate-500">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur dignissimos repellendus totam!
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/portfolio/3.png"
+                alt="Bookshelf Apps"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
+              Bookshelf Apps
+            </h3>
+            <p class="font-medium text-base text-slate-500">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur dignissimos repellendus totam!
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/portfolio/4.png"
+                alt="Todo List"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Todo List</h3>
+            <p class="font-medium text-base text-slate-500">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur dignissimos repellendus totam!
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="/dist/img/portfolio/5.png"
+                alt="Landing Pages Pribadi"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
+              Portfolio Pribadi Bootstrap5
+            </h3>
+            <p class="font-medium text-base text-slate-500">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur dignissimos repellendus totam!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Portfolio Section End -->
 
     <script src="/dist/js/script.js"></script>
   </body>
