--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+d<!DOCTYPE html>
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -274,8 +274,14 @@
         <div class="w-full px-4">
           <div class="max-w-full mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
-            <h2 class="font-bold text-3xl text-dark mb-4">Project Terbaru</h2>
-            <p class="font-medium text-md text-slate-500">
+            <h2
+              class="font-bold text-3xl text-dark mb-4 sm:text-4xl lg:text-5xl"
+            >
+              Project Terbaru
+            </h2>
+            <p
+              class="max-w-3xl mx-auto font-medium text-md text-slate-500 lg:text-lg"
+            >
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
               odio laudantium quibusdam soluta distinctio veniam ex iure esse
               explicabo sunt.
@@ -368,6 +374,65 @@
     </section>
     <!-- Portfolio Section End -->
 
+    <!-- Clients Section Start -->
+    <section id="clients" class="pt-36 pb-32 bg-slate-700">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+            <h2
+              class="font-bold text-3xl text-white mb-4 sm:text-4xl lg:text-5xl"
+            >
+              Mitra yang Telah Bekerjasama
+            </h2>
+            <p class="font-medium text-md text-slate-500 lg:text-lg">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
+              porro quibusdam impedit.
+            </p>
+          </div>
+        </div>
+        <div class="w-full px-4">
+          <div class="flex flex-wrap items-center justify-center">
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
+            >
+              <img
+                src="/dist/img/clients/Tiket.png"
+                alt="Tiket.com"
+              />
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
+            >
+              <img
+                src="/dist/img/clients/Gojek.png"
+                alt="Gojek"
+              />
+            </a>
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
+            >
+              <img
+                src="/dist/img/clients/Tokopedia.png"
+                alt="Tokopedia"
+              />
+            </a>
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
+            >
+              <img
+                src="/dist/img/clients/google.svg"
+                alt="Google"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Clients Section End -->
     <script src="/dist/js/script.js"></script>
   </body>
 </html>
