--- a/src/index.html
+++ b/src/index.html
@@ -379,7 +379,7 @@ d<!DOCTYPE html>
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto text-center mb-16">
-            <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+            <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
             <h2
               class="font-bold text-3xl text-white mb-4 sm:text-4xl lg:text-5xl"
             >
@@ -433,6 +433,64 @@ d<!DOCTYPE html>
       </div>
     </section>
     <!-- Clients Section End -->
+    
+    <!-- Blog Section Start -->
+    <section id="blog" class="pt-36 pb-32 bg-slate-200">
+      <div class="w-full px-4">
+        <div class="max-w-full mx-auto text-center mb-16">
+          <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
+          <h2
+            class="font-bold text-3xl text-dark mb-4 sm:text-4xl lg:text-5xl"
+          >
+          Wawasan & Inspirasi 
+          </h2>
+          <p
+            class="max-w-3xl mx-auto font-medium text-md text-slate-500 lg:text-lg"
+          >
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis ipsam quod cupiditate deleniti, tempore ut!
+          </p>
+        </div>
+        <div class="flex flex-wrap justify-center">
+          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+              <img src="/dist/img/blog/1.jpg" alt="Codingan" class="w-full">
+              <div class="py-8 px-6">
+                <h3 class="mb-3 font-semibold text-primary text-xl truncate">Belajar Programing Itu Mudah</h3>
+                <p class="font-medium text-base text-slate-500 mb-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate provident aspernatur nihil, eligendi fuga officiis.</p>
+                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-70">
+                  Baca Selengkapnya
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+              <img src="/dist/img/blog/9.jpg" alt="Codingan" class="w-full">
+              <div class="py-8 px-6">
+                <h3 class="mb-3 font-semibold text-primary text-xl truncate">Wisata Alam Indonesia</h3>
+                <p class="font-medium text-base text-slate-500 mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint doloremque debitis velit quaerat praesentium consequuntur?</p>
+                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-70">
+                  Baca Selengkapnya
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+              <img src="/dist/img/blog/10.jpg" alt="Codingan" class="w-full">
+              <div class="py-8 px-6">
+                <h3 class="mb-3 font-semibold text-primary text-xl truncate">Fakta Menarik Tentang Hewan</h3>
+                <p class="font-medium text-base text-slate-500 mb-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque aperiam, magni est architecto aliquid deserunt.</p>
+                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-70">
+                  Baca Selengkapnya
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Blog Section End -->
     <script src="/dist/js/script.js"></script>
   </body>
 </html>
