--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-d<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
@@ -491,6 +491,45 @@ d<!DOCTYPE html>
       </div>
     </section>
     <!-- Blog Section End -->
+
+    <!-- Contact Section Start -->
+    <section id="contact" class="pt-36 pb-32">
+      <div class="container">
+        <div class="max-w-full mx-auto text-center mb-16">
+          <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
+          <h2
+            class="font-bold text-3xl text-dark mb-4 sm:text-4xl lg:text-5xl"
+          >
+          Hubungi Kami 
+          </h2>
+          <p
+            class="max-w-3xl mx-auto font-medium text-md text-slate-500 lg:text-lg"
+          >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi laudantium quibusdam quae.
+          </p>
+        </div>
+        <form action="">
+        <div class="w-full lg:w-2/3 lg:mx-auto">
+          <div class="w-full px-4 mb-8">
+            <label for="name" class="text-base font-bold text-primary">Nama</label>
+            <input type="text" id="name" class="w-full bg-slate-200 p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+          </div>
+          <div class="w-full px-4 mb-8">
+            <label for="email" class="text-base font-bold text-primary">Email</label>
+            <input type="email" id="email" class="w-full bg-slate-200 p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+          </div>
+          <div class="w-full px-4 mb-8">
+            <label for="message" class="text-base font-bold text-primary">Pesan</label>
+            <textarea type="text" id="message" class="w-full bg-slate-200 p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-32"></textarea>
+          </div>
+          <div class="w-full px-4">
+            <button class="text-base font-semibold text-white bg-primary px-8 py-3 rounded-full w-full hover:opacity-80 hover:shadow-lg transition duration-500">Kirim</button>
+          </div>
+        </div>
+        </form>
+      </div>
+    </section>
+    <!-- Contact Section End -->
     <script src="/dist/js/script.js"></script>
   </body>
 </html>
