--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smoothgit">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="src/output.css" />
     <title>Porfolio TailwindCSS</title>
   </head>
   <body>
@@ -125,7 +125,7 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="/dist/img/dwiky.png"
+                src="dist/img/dwiky.png"
                 alt="Dwiky Wisan Saputra"
                 class="max-w-full mx-auto"
               />
@@ -294,7 +294,7 @@
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="/dist/img/portfolio/1.png"
+                src="dist/img/portfolio/1.png"
                 alt="Undangan online"
                 width="w-full"
               />
@@ -310,7 +310,7 @@
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="/dist/img/portfolio/2.png"
+                src="dist/img/portfolio/2.png"
                 alt="Landing Pages Dicoding"
                 width="w-full"
               />
@@ -326,7 +326,7 @@
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="/dist/img/portfolio/3.png"
+                src="dist/img/portfolio/3.png"
                 alt="Bookshelf Apps"
                 width="w-full"
               />
@@ -342,7 +342,7 @@
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="/dist/img/portfolio/4.png"
+                src="dist/img/portfolio/4.png"
                 alt="Todo List"
                 width="w-full"
               />
@@ -356,7 +356,7 @@
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="/dist/img/portfolio/5.png"
+                src="dist/img/portfolio/5.png"
                 alt="Landing Pages Pribadi"
                 width="w-full"
               />
@@ -398,7 +398,7 @@
               class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
             >
               <img
-                src="/dist/img/clients/Tiket.png"
+                src="dist/img/clients/Tiket.png"
                 alt="Tiket.com"
               />
             <a
@@ -406,7 +406,7 @@
               class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
             >
               <img
-                src="/dist/img/clients/Gojek.png"
+                src="dist/img/clients/Gojek.png"
                 alt="Gojek"
               />
             </a>
@@ -415,7 +415,7 @@
               class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
             >
               <img
-                src="/dist/img/clients/Tokopedia.png"
+                src="dist/img/clients/Tokopedia.png"
                 alt="Tokopedia"
               />
             </a>
@@ -424,7 +424,7 @@
               class="max-w-[120px] mx-4 py-4 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300 lg:mx-6 xl:mx-8"
             >
               <img
-                src="/dist/img/clients/google.svg"
+                src="dist/img/clients/google.svg"
                 alt="Google"
               />
             </a>
@@ -453,7 +453,7 @@
         <div class="flex flex-wrap justify-center">
           <div class="w-full px-4 md:w-1/2 lg:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-              <img src="/dist/img/blog/1.jpg" alt="Codingan" class="w-full">
+              <img src="dist/img/blog/1.jpg" alt="Codingan" class="w-full">
               <div class="py-8 px-6">
                 <h3 class="mb-3 font-semibold text-primary text-xl truncate">Belajar Programing Itu Mudah</h3>
                 <p class="font-medium text-base text-slate-500 mb-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate provident aspernatur nihil, eligendi fuga officiis.</p>
@@ -465,7 +465,7 @@
           </div>
           <div class="w-full px-4 md:w-1/2 lg:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-              <img src="/dist/img/blog/9.jpg" alt="Codingan" class="w-full">
+              <img src="dist/img/blog/9.jpg" alt="Codingan" class="w-full">
               <div class="py-8 px-6">
                 <h3 class="mb-3 font-semibold text-primary text-xl truncate">Wisata Alam Indonesia</h3>
                 <p class="font-medium text-base text-slate-500 mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint doloremque debitis velit quaerat praesentium consequuntur?</p>
@@ -477,7 +477,7 @@
           </div>
           <div class="w-full px-4 md:w-1/2 lg:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
-              <img src="/dist/img/blog/10.jpg" alt="Codingan" class="w-full">
+              <img src="dist/img/blog/10.jpg" alt="Codingan" class="w-full">
               <div class="py-8 px-6">
                 <h3 class="mb-3 font-semibold text-primary text-xl truncate">Fakta Menarik Tentang Hewan</h3>
                 <p class="font-medium text-base text-slate-500 mb-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque aperiam, magni est architecto aliquid deserunt.</p>
@@ -685,4 +685,3 @@
     <!-- Footer End -->
     <script src="/dist/js/script.js"></script>
   </body>
-</html>
