--- a/index.html
+++ b/index.html
@@ -683,5 +683,5 @@
       </div>
     </footer>
     <!-- Footer End -->
-    <script src="/dist/js/script.js"></script>
+    <script src="dist/js/script.js"></script>
   </body>
