menambahkan link ke contact me pada file index.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               nyata!
             </p>
             <a
-              href="#"
+              href="#contact"
               class="px-8 py-3 text-base font-semibold bg-primary text-white rounded-full hover:shadow-lg hover:bg-opacity-80 transition-all duration-300"
               >Contact Me</a
             >
