mengubah deskripsi pada setiap section index.html

--- a/index.html
+++ b/index.html
@@ -282,9 +282,7 @@
             <p
               class="max-w-3xl mx-auto font-medium text-md text-slate-500 lg:text-lg"
             >
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
-              odio laudantium quibusdam soluta distinctio veniam ex iure esse
-              explicabo sunt.
+            Kumpulan karya sederhana yang saya buat sebagai langkah awal dalam dunia frontend. Setiap proyek mencerminkan semangat belajar dan eksplorasi saya.
             </p>
           </div>
         </div>
@@ -303,8 +301,7 @@
               Undangan Pernikahan Online
             </h3>
             <p class="font-medium text-base text-slate-500">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequatur dignissimos repellendus totam!
+              Web undangan pernikahan modern, praktis, dan elegan untuk momen spesial Anda!
             </p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -319,8 +316,7 @@
               Cloning Landing Pages Dicoding
             </h3>
             <p class="font-medium text-base text-slate-500">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequatur dignissimos repellendus totam!
+              Latihan bikin landing page! Cloning desain online untuk asah skill frontend. Yuk cek hasilnya!
             </p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -335,8 +331,7 @@
               Bookshelf Apps
             </h3>
             <p class="font-medium text-base text-slate-500">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequatur dignissimos repellendus totam!
+              Bookshelf Apps online: Simpan, cari, dan kelola koleksi buku favoritmu dengan mudah!
             </p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -349,8 +344,7 @@
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Todo List</h3>
             <p class="font-medium text-base text-slate-500">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequatur dignissimos repellendus totam!
+              Todo List online sederhana untuk membantu mengatur aktivitas harian dengan lebih mudah dan efisien.
             </p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -365,8 +359,7 @@
               Portfolio Pribadi Bootstrap5
             </h3>
             <p class="font-medium text-base text-slate-500">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consequatur dignissimos repellendus totam!
+              Proyek sederhana dengan Bootstrap5, langkah awal membangun portofolio pribadi yang responsif dan modern!
             </p>
           </div>
         </div>
@@ -385,9 +378,8 @@
             >
               Mitra yang Telah Bekerjasama
             </h2>
-            <p class="font-medium text-md text-slate-500 lg:text-lg">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit
-              porro quibusdam impedit.
+            <p class="max-w-3xl mx-auto font-medium text-md text-slate-500 lg:text-lg">
+              Terima kasih kepada para mitra yang telah mempercayai saya. Setiap proyek adalah langkah berharga untuk belajar, berkembang, dan menciptakan karya terbaik bersama.
             </p>
           </div>
         </div>
@@ -447,7 +439,7 @@
           <p
             class="max-w-3xl mx-auto font-medium text-md text-slate-500 lg:text-lg"
           >
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis ipsam quod cupiditate deleniti, tempore ut!
+          Temukan inspirasi seputar teknologi, gaya hidup, dan kreativitas di sini
           </p>
         </div>
         <div class="flex flex-wrap justify-center">
@@ -505,7 +497,7 @@
           <p
             class="max-w-3xl mx-auto font-medium text-md text-slate-500 lg:text-lg"
           >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi laudantium quibusdam quae.
+          Tertarik untuk berkolaborasi atau memiliki pertanyaan? Hubungi kami, kami siap membantu dan berdiskusi lebih lanjut!
           </p>
         </div>
         <form action="">
